[gd_scene load_steps=3 format=3 uid="uid://m7n48njjgg5q"]

[ext_resource type="Script" path="res://ui/UIGame.gd" id="1_edvd6"]
[ext_resource type="Theme" uid="uid://8vbrmwwup85v" path="res://ui/nes_theme.tres" id="1_u5vi1"]

[node name="UIGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_u5vi1")
script = ExtResource("1_edvd6")

[node name="ui_players_box" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 20.0
offset_top = 14.0
offset_right = 270.0
offset_bottom = 172.0

[node name="marginFPS" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.0
offset_right = -2.0
offset_bottom = 53.0
grow_horizontal = 0

[node name="labelFPS" type="Label" parent="marginFPS"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "FPS: 000
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="panel_infos" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 8.0
offset_right = 204.0
offset_bottom = 51.0
grow_horizontal = 2

[node name="marginPanel" type="MarginContainer" parent="panel_infos"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="panel_infos/marginPanel"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="panel_infos/marginPanel/VBoxContainer"]
layout_mode = 2

[node name="labelCapsules" type="Label" parent="panel_infos/marginPanel/VBoxContainer/HFlowContainer"]
layout_mode = 2
text = "In zone:
"

[node name="ScrollContainer" type="ScrollContainer" parent="panel_infos/marginPanel/VBoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="cap_icons_container" type="HBoxContainer" parent="panel_infos/marginPanel/VBoxContainer/HFlowContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="panel_infos/marginPanel/VBoxContainer"]
layout_mode = 2

[node name="label_round" type="Label" parent="panel_infos/marginPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Round: 000"

[node name="label_turn" type="Label" parent="panel_infos/marginPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Turn: 000"

[node name="action_btns" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -146.5
offset_top = 84.0
offset_right = 146.5
offset_bottom = 111.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SpawnCapsule" type="Button" parent="action_btns"]
layout_mode = 2
size_flags_vertical = 3
text = "Spawn capsule"

[node name="DeleteAll" type="Button" parent="action_btns"]
layout_mode = 2
size_flags_vertical = 3
text = "Delete all"

[node name="Possess" type="Button" parent="action_btns"]
layout_mode = 2
size_flags_vertical = 3
text = "Possess"

[connection signal="pressed" from="action_btns/SpawnCapsule" to="." method="_on_spawn_capsule_pressed"]
[connection signal="pressed" from="action_btns/DeleteAll" to="." method="_on_delete_all_pressed"]
[connection signal="pressed" from="action_btns/Possess" to="." method="_on_possess_pressed"]
